--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     def room_version = "2.2.5"
     def lifecycle_version = "2.3.0-alpha06"
 
